# daft-engine

./: .clang-format  CMakeLists.txt  README.md
res/img/: bird.xcf  cells.xcf  cloud.xcf  pipe.xcf
src/: Defs.hpp  Game.cpp  Game.hpp  main.cpp
src/engine/: AssetManager.cpp  AssetManager.hpp  InputManager.cpp  InputManager.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/scenes/: BasicScene.hpp  MineScene.cpp  MineScene.hpp
src/scenes/basic/: BasicScene.cpp
src/scenes/flap/: Bird.hpp  FlapScene.cpp  FlapScene.hpp  Pipe.hpp
src/scenes/mine/: MineScene.cpp  MineScene.hpp
